--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,13 +26,16 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    namespace = 'appmire.be.flutterjailbreakdetectionexample'
     compileSdkVersion 33
-
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
     defaultConfig {
-        minSdkVersion 17
+        minSdkVersion 21
     }
 }
 
